fecdat/force-app/main/default/objects/FEC_In_Approval_Master_Data_Setting__c/FEC_In_Approval_Master_Data_Setting__c.object-meta.xml
<CustomObject>
    <description>Bộ Master Data Setting được nối với Nature of Case được sử dụng khi người dùng chỉnh sửa, cập nhật tham số</description>
    <label>In-Approval Master Data Setting</label>
    <nameField>
        <displayFormat>MDS-{0}</displayFormat>
        <label>MDS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>In-Approval Master Data Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>