fecdat/force-app/main/default/objects/FEC_In_Approval_Master_Data_Setting__c/fields/FEC_Case_Stage__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tên giai đoạn của Case</description>
    <label>Case Stage</label>
    <referenceTo>FEC_Case_Stage__c</referenceTo>
    <relationshipLabel>In-Approval Master Data Settings</relationshipLabel>
    <relationshipName>In_Approval_Master_Data_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>