fecdat/force-app/main/default/objects/FEC_In_Approval_Master_Data_Setting__c/fields/FEC_Channels__c.field-meta.xml
<CustomField>
    <fullName>FEC_Channels__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Thông tin kênh được khai thác dữ liệu</description>
    <label>Channels</label>
    <referenceTo>FEC_Channel__c</referenceTo>
    <relationshipLabel>In-Approval Master Data Settings</relationshipLabel>
    <relationshipName>In_Approval_Master_Data_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>