fecdat/force-app/main/default/objects/FEC_In_Approval_Master_Data_Setting__c/fields/FEC_Nature_of_Cases__c.field-meta.xml
<CustomField>
    <fullName>FEC_Nature_of_Cases__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tên bộ Nature of Case</description>
    <label>Nature of Cases</label>
    <referenceTo>FEC_Nature_of_Case__c</referenceTo>
    <relationshipLabel>In-Approval Master Data Settings</relationshipLabel>
    <relationshipName>In_Approval_Master_Data_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>