fecdat/force-app/main/default/objects/FEC_In_Approval_Master_Data_Setting__c/fields/Field_Editable__c.field-meta.xml
<CustomField>
    <fullName>Field_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tùy chọn trường có thể chỉnh sửa trên màn hình Case</description>
    <label>Field Editable</label>
    <type>Checkbox</type>
</CustomField>